plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.snnsoluciones'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    dependencies {
        dependency 'org.apache.commons:commons-lang3:3.18.0'
    }
}

ext {
    // Versiones de las dependencias
    jwtVersion = '0.11.5'
    mapstructVersion = '1.5.5.Final'
    springdocVersion = '2.3.0'
    hypersistenceVersion = '3.7.0'
    awsSdkVersion = '1.12.470'
    bouncyCastleVersion = '1.78'
    xmlsecVersion = '4.0.2'
    itextVersion = '7.2.5'
    okHttpVersion = '4.11.0'
    jasperReportsVersion = '6.21.3'
    zxingVersion = '3.5.3'
    jFreeChartVersion = '1.0.13'
    openPdfVersion = '1.3.30'
    modelMapperVersion = '3.2.0'
    commonsLang3Version = '3.18.0'
}

dependencies {
    // ================== Spring Boot Starters ==================
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // ================== Database ==================
    runtimeOnly 'org.postgresql:postgresql'
    implementation "io.hypersistence:hypersistence-utils-hibernate-63:${hypersistenceVersion}"

    // ================== AWS SDK ==================
    implementation "com.amazonaws:aws-java-sdk-s3:${awsSdkVersion}"

    // ================== Security & JWT ==================
    implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"

    // ================== Mapping & Validation ==================
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
    implementation "org.modelmapper:modelmapper:${modelMapperVersion}"
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'

    // ================== Digital Signatures (XAdES4j) ==================
    implementation 'com.google.cloud:google-cloud-security-private-ca:2.45.0'

    implementation platform('eu.europa.ec.joinup.sd-dss:dss-bom:6.3')

    // Mínimos para XAdES con PKCS#12
    implementation 'eu.europa.ec.joinup.sd-dss:dss-service'
    implementation 'eu.europa.ec.joinup.sd-dss:dss-token'
    implementation 'eu.europa.ec.joinup.sd-dss:dss-xades'
    implementation 'eu.europa.ec.joinup.sd-dss:dss-validation'
    implementation 'eu.europa.ec.joinup.sd-dss:dss-utils-apache-commons'

    implementation 'org.apache.commons:commons-lang3'


    implementation "org.bouncycastle:bcprov-jdk18on:${bouncyCastleVersion}"

    // ================== Reactive & HTTP Client ==================
    implementation 'io.projectreactor:reactor-core'
    runtimeOnly 'io.projectreactor:reactor-tools'
    implementation "com.squareup.okhttp3:okhttp:${okHttpVersion}"

    // ================== JSON Processing ==================
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // ================== PDF Generation ==================
    implementation "com.itextpdf:itext7-core:${itextVersion}"

    // ================== Reporting (JasperReports) ==================
    implementation("net.sf.jasperreports:jasperreports:${jasperReportsVersion}") {
        exclude group: 'com.lowagie', module: 'itext'
    }
    implementation "net.sf.jasperreports:jasperreports-fonts:${jasperReportsVersion}"
    implementation "com.github.librepdf:openpdf:${openPdfVersion}"

    // ================== QR Code & Charts ==================
    implementation "com.google.zxing:core:${zxingVersion}"
    implementation "com.google.zxing:javase:${zxingVersion}"
    implementation "jfree:jfreechart:${jFreeChartVersion}"

    implementation 'org.apache.poi:poi:5.2.4'
    implementation 'org.apache.poi:poi-ooxml:5.2.4'

    // ================== Documentation ==================
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"

    // ================== Lombok ==================
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // ================== Utilities ==================
    implementation "org.apache.commons:commons-lang3:${commonsLang3Version}"
    implementation("org.apache.httpcomponents.core5:httpcore5:5.3.4")

    // ================== Development ==================
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    implementation 'com.github.anastaciocintra:escpos-coffee:4.1.0'


    // ================== WAR Deployment ==================
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

    // ================== Testing ==================
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// ================== Compiler Configuration ==================
tasks.withType(JavaCompile) {
    options.annotationProcessorPath = configurations.annotationProcessor
    options.compilerArgs += [
            '-Amapstruct.defaultComponentModel=spring',
            '-Amapstruct.unmappedTargetPolicy=WARN',
            '-parameters'
    ]
}

// ================== Test Configuration ==================
tasks.named('test') {
    useJUnitPlatform()
}

// ================== Packaging Configuration ==================
war {
    enabled = true
    archiveBaseName = 'nathbit-pos'
    archiveVersion = version
}

jar {
    enabled = true
    archiveBaseName = 'nathbit-pos'
}

// ================== Run Configuration ==================
bootRun {
    jvmArgs = [
            '-Dspring.profiles.active=dev',
            '-Dfile.encoding=UTF-8'
    ]
}